--- a/src/main/webapp/views/web/home/index.html
+++ b/src/main/webapp/views/web/home/index.html
@@ -5,7 +5,7 @@
 
 <div layout:fragment="body">
 	<div th:if="${msg != null}"
-		class="alert alert-dismissible alert-danger fade show" role="alert"
+		th:class="alert alert-dismissible alert-danger fade show" role="alert"
 		style="text-align: center;">
 		<button type="button" class="close" data-dismiss="alert"
 			aria-label="Close">
@@ -87,19 +87,19 @@
 	<div class="row no-gutters pb-5">
 		<div class="col-sm-6">
 			<div class="hovereffect">
-				<img class="img-fluid" th:src="@{/assets/web/images/a1.jpg}" alt="">
+				<img class="img-fluid" th:src="@{/assets/web/images/a1.jpg}" alt="" style="width:100%">
 				<div class="overlay">
 					<h5>women's fashion</h5>
-					<a class="info" th:href="@{/shop}">Shop Now</a>
+					<a class="info" th:href="@{/categories/2}">Shop Now</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-sm-6">
 			<div class="hovereffect">
-				<img class="img-fluid" th:src="@{/assets/web/images/a2.jpg}" alt="">
+				<img class="img-fluid" th:src="@{/assets/web/images/a2.jpg}" alt="" style="width:100%">
 				<div class="overlay">
 					<h5>men's fashion</h5>
-					<a class="info" th:href="@{/shop}">Shop Now</a>
+					<a class="info" th:href="@{/categories/1}">Shop Now</a> 
 				</div>
 			</div>
 		</div>
@@ -324,6 +324,109 @@
 		</div>
 	</section>
 	<!-- //product tabs -->
+	<section th:if="${recentlyViewedProducts} != null"
+		class="tabs_pro py-md-5 pt-sm-3 pb-5">
+		<div class="tabs tabs-style-line pt-md-1">
+			<div id="clothing-nav-content" class="tab-content py-sm-1">
+				<div role="tabpanel" class="tab-pane fade show active" id="women"
+					aria-labelledby="women-tab">
+					<h5 class="head_agileinfo text-center text-capitalize pb-5">
+						<span>Recently Viewed Products</span>
+					</h5>
+					<div id="owl-demo" class="owl-carousel text-center card-group my-5">
+						<div class="item"
+							th:each="product, iter : ${recentlyViewedProducts}">
+							<!-- card -->
+							<div class="card product-men p-3">
+								<div class="men-thumb-item">
+									<img th:src="@{'/assets/images/'+ ${product.images[0]}}"
+										alt="img" class="card-img-top">
+									<div class="men-cart-pro">
+										<div class="inner-men-cart-pro">
+											<a th:href="@{/products/{id}(id=${product.id})}"
+												class="link-product-add-cart">Quick View</a>
+										</div>
+									</div>
+								</div>
+								<!-- card body -->
+								<div class="card-body  py-3 px-2" style="text-align: inherit;">
+									<h5 class="card-title text-capitalize"
+										th:text="${product.name}" style="height: 60px;"></h5>
+									<p>
+										<span th:text="${product.priceString}"></span>
+									</p>
+									<div>
+										<!--First Star-->
+										<i class="fa fa-star-o checkedStar"
+											th:if="${product.rate_avg == 0}"></i> <i
+											class="fa fa-star-half-o checkedStar"
+											th:if="${product.rate_avg > 0 && product.rate_avg < 1}"></i>
+										<i class="fa fa-star checkedStar"
+											th:if="${product.rate_avg >= 1}"></i>
+										<!--Second Star-->
+										<i class="fa fa-star-o checkedStar"
+											th:if="${product.rate_avg <= 1}"></i> <i
+											class="fa fa-star-half-o checkedStar"
+											th:if="${product.rate_avg > 1 && product.rate_avg < 2}"></i>
+										<i class="fa fa-star checkedStar"
+											th:if="${product.rate_avg >= 2}"></i>
+										<!--Third Star-->
+										<i class="fa fa-star-o checkedStar"
+											th:if="${product.rate_avg <= 2}"></i> <i
+											class="fa fa-star-half-o checkedStar"
+											th:if="${product.rate_avg > 2 && product.rate_avg < 3}"></i>
+										<i class="fa fa-star checkedStar"
+											th:if="${product.rate_avg >= 3}"></i>
+										<!--Fourth Star-->
+										<i class="fa fa-star-o checkedStar"
+											th:if="${product.rate_avg <= 3}"></i> <i
+											class="fa fa-star-half-o checkedStar"
+											th:if="${product.rate_avg > 3 && product.rate_avg < 4}"></i>
+										<i class="fa fa-star checkedStar"
+											th:if="${product.rate_avg >= 4}"></i>
+										<!--Sixth Star-->
+										<i class="fa fa-star-o checkedStar"
+											th:if="${product.rate_avg <= 4}"></i> <i
+											class="fa fa-star-half-o checkedStar"
+											th:if="${product.rate_avg > 4 && product.rate_avg < 5}"></i>
+										<i class="fa fa-star checkedStar"
+											th:if="${product.rate_avg == 5}"></i>
+
+									</div>
+									<!-- <div class="card-text d-flex justify-content-between">
+											khuyến mại
+											<p class="text-dark font-weight-bold"></p>
+											<p th:text="${product.price}"> ₫</p>
+										</div> -->
+								</div>
+								<!-- card footer -->
+								<div class="card-footer d-flex justify-content-end">
+									<form
+										th:action="@{/cart/add(productId=${product.id}, quantity=${quantity})}">
+										<input th:name="productId" type="hidden"
+											th:value="${product.id}" /> <input th:name="quantity"
+											type="hidden" th:value="1" />
+										<button type="submit" class="hub-cart phub-cart btn">
+											<i class="fa fa-cart-plus" aria-hidden="true"></i>
+										</button>
+									</form>
+								</div>
+							</div>
+							<!-- //card -->
+						</div>
+
+						<div class="item">
+							<div class="product-men p-3 text-center">
+								<img th:src="@{/assets/web/images/p2.png}"
+									class="img-responsive" alt="" /> <a href="women.html"
+									class="btn btn-lg bg-info text-white">view more</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </div>
 
 </html>
