--- a/src/main/webapp/views/web/layout/header.html
+++ b/src/main/webapp/views/web/layout/header.html
@@ -9,40 +9,12 @@
 		<!-- //logo -->
 		<div class="w3ls_right_nav ml-auto d-flex">
 			<!-- search form -->
-			<form class="nav-search form-inline my-0 form-control" action="#" method="post">
-				<select class="form-control input-lg" name="category">
-					<option value="all">Search our store</option>
-					<optgroup label="Mens">
-						<option value="T-Shirts">T-Shirts</option>
-						<option value="coats-jackets">Coats & Jackets</option>
-						<option value="Shirts">Shirts</option>
-						<option value="Suits & Blazers">Suits & Blazers</option>
-						<option value="Jackets">Jackets</option>
-						<option value="Sweat Shirts">Trousers</option>
-					</optgroup>
-					<optgroup label="Womens">
-						<option value="Dresses">Dresses</option>
-						<option value="T-shirts">T-shirts</option>
-						<option value="skirts">Skirts</option>
-						<option value="jeans">Jeans</option>
-						<option value="Tunics">Tunics</option>
-					</optgroup>
-					<optgroup label="Girls">
-						<option value="Dresses">Dresses</option>
-						<option value="T-shirts">T-shirts</option>
-						<option value="skirts">Skirts</option>
-						<option value="jeans">Jeans</option>
-						<option value="Tops">Tops</option>
-					</optgroup>
-					<optgroup label="Boys">
-						<option value="T-Shirts">T-Shirts</option>
-						<option value="coats-jackets">Coats & Jackets</option>
-						<option value="Shirts">Shirts</option>
-						<option value="Suits & Blazers">Suits & Blazers</option>
-						<option value="Jackets">Jackets</option>
-						<option value="Sweat Shirts">Sweat Shirts</option>
-					</optgroup>
-				</select> <input class="btn btn-outline-secondary  ml-3 my-sm-0" type="submit" value="Search">
+			<form class="nav-search form-inline my-0 form-control" action="#"
+				method="post">
+				<input class="ml-3 my-sm-0"
+					type="text" style="height: 100%;">
+				<input class="btn btn-outline-secondary  ml-3 my-sm-0"
+					type="submit" value="Search">
 			</form>
 			<!-- search form -->
 			<div class="nav-icon d-flex">
@@ -86,122 +58,75 @@
 	</nav>
 	<!-- //top nav -->
 	<!-- bottom nav -->
-	<nav class="navbar navbar-expand-lg navbar-light justify-content-center">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	<nav
+		class="navbar navbar-expand-lg navbar-light justify-content-center"
+		style="border-bottom: solid 0.5px; border-color: lightgray; margin-bottom: 2px;">
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false"
+			aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mx-auto text-center">
-				<li class="nav-item"><a class="nav-link  active" href="index.html">Home <span
-							class="sr-only">(current)</span>
-					</a></li>
-				<li class="nav-item dropdown has-mega-menu" style="position: static;"><a
-						class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-						aria-haspopup="true" aria-expanded="false">Men's clothing</a>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent" >
+			<ul class="navbar-nav mx-auto text-center" th:with="w=${1100/(4+#arrays.length(session.rootCategories))}">
+				<li class="nav-item">
+				<a class="nav-link"
+					th:href="@{/}"
+					th:style="'width:' + ${w} + 'px; border-right: solid 0.5px; border-color: lightgray;'">Home<span class="sr-only">(current)</span>
+				</a></li>
+				<li class="nav-item dropdown has-mega-menu"
+					style="position: static;"
+					th:each="rootCategory : ${session.rootCategories}"
+					th:href="@{/}" 
+					><a class="nav-link dropdown-toggle"
+					data-toggle="dropdown" th:href="@{/categories/{id}/products(id=${rootCategory.id})}" role="button" aria-haspopup="true"
+					th:text="${rootCategory.name}"
+					th:style="'width:' + ${w} + 'px; border-right: solid 0.5px; border-color: lightgray;'"></a>
 					<div class="dropdown-menu" style="width: 100%">
 						<div class="px-0 container">
 							<div class="row">
-								<div class="col-md-4">
-									<a class="dropdown-item" href="men.html">T-Shirts</a> <a class="dropdown-item"
-										href="men.html">Coats</a> <a class="dropdown-item" href="men.html">Shirts</a> <a
-										class="dropdown-item" href="men.html">Suits & Blazers</a> <a
-										class="dropdown-item" href="men.html">Jackets</a> <a class="dropdown-item"
-										href="men.html">Trousers</a>
+								<div class="col-md-12" style="padding: 10px 0px;">
+									<a class="dropdown-item" style="text-align: center"
+										th:href="@{/categories/{id}/products(id=${rootCategory.id})}"><h3
+											th:text="${rootCategory.name}"></h3></a>
 								</div>
-								<div class="col-md-4">
-									<a class="dropdown-item" href="men.html">T-Shirts</a> <a class="dropdown-item"
-										href="men.html">Trousers</a> <a class="dropdown-item" href="men.html">Shirts</a>
-									<a class="dropdown-item" href="men.html">Suits & Blazers</a> <a
-										class="dropdown-item" href="men.html">Coats & Jackets</a> <a
-										class="dropdown-item" href="men.html">Jackets</a>
-								</div>
-								<div class="col-md-4">
-									<a class="dropdown-item" href="men.html">T-Shirts</a> <a class="dropdown-item"
-										href="men.html">Coats</a> <a class="dropdown-item" href="men.html">Shirts</a> <a
-										class="dropdown-item" href="men.html">Suits & Blazers</a> <a
-										class="dropdown-item" href="men.html">Jackets</a> <a class="dropdown-item"
-										href="men.html">Trousers</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</li>
-				<li class="nav-item dropdown has-mega-menu" style="position: static;"><a
-						class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-						aria-haspopup="true" aria-expanded="false">Women's clothing</a>
-					<div class="dropdown-menu" style="width: 100%">
-						<div class="px-0 container">
-							<div class="row">
-								<div class="col-md-4">
-									<a class="dropdown-item" href="women.html">Dresses</a> <a class="dropdown-item"
-										href="women.html">T-shirts</a> <a class="dropdown-item"
-										href="women.html">Skirts</a> <a class="dropdown-item"
-										href="women.html">Jeans</a> <a class="dropdown-item"
-										href="women.html">Tunics</a>
-								</div>
-								<div class="col-md-4">
-									<a class="dropdown-item" href="women.html">T-shirts</a> <a class="dropdown-item"
-										href="women.html">Dresses</a> <a class="dropdown-item"
-										href="women.html">Tunics</a> <a class="dropdown-item"
-										href="women.html">Skirts</a> <a class="dropdown-item"
-										href="women.html">Jeans</a>
-								</div>
-								<div class="col-md-4">
-									<a class="dropdown-item" href="women.html">Dresses</a> <a class="dropdown-item"
-										href="women.html">T-shirts</a> <a class="dropdown-item"
-										href="women.html">Skirts</a> <a class="dropdown-item"
-										href="women.html">Jeans</a> <a class="dropdown-item"
-										href="women.html">Tunics</a>
+								<div th:class="'col-md-' + ${12/#arrays.length(rootCategory.subCategories)}"
+									th:if="${rootCategory.subCategories} != null"  th:each="chillDepth1stCategory : ${rootCategory.subCategories}">
+									<a class="dropdown-item bg-light" th:href="@{/categories/{id}/products(id=${chillDepth1stCategory.id})}"
+										th:text="${chillDepth1stCategory.name}"></a>
+									<div th:if="${chillDepth1stCategory.subCategories} != null"
+										th:each="chillDepth2ndCategory : ${chillDepth1stCategory.subCategories}">
+										<a class="dropdown-item" th:href="@{/categories/{id}/products(id=${chillDepth2ndCategory.id})}"
+											th:text="'&nbsp;&nbsp;&nbsp;&nbsp' + ${chillDepth2ndCategory.name}"></a>
+										<div th:if="${chillDepth2ndCategory.subCategories} != null"
+											th:each="chillDepth3rdCategory : ${chillDepth2ndCategory.subCategories}">
+											<a class="dropdown-item" th:href="@{/categories/{id}/products(id=${chillDepth3rdCategory.id})}"
+												th:text="'&nbsp;&nbsp;&nbsp;&nbsp' + ${chillDepth3rdCategory.name}"></a>
+											<div th:if="${chillDepth3rdCategory.subCategories} != null"
+												th:each="chillDepth4thCategory : ${chillDepth3rdCategory.subCategories}">
+												<a class="dropdown-item" th:href="@{/categories/{id}/products(id=${chillDepth4thCategory.id})}"
+													th:text="'&nbsp;&nbsp;&nbsp;&nbsp' + ${chillDepth4thCategory.name}"></a>
+												<div th:if="${chillDepth4thCategory.subCategories} != null"
+													th:each="chillDepth5thCategory : ${chillDepth4thCategory.subCategories}">
+													<a class="dropdown-item" th:href="@{/categories/{id}/products(id=${chillDepth5thCategory.id})}"
+														th:text="'&nbsp;&nbsp;&nbsp;&nbsp' + ${chillDepth5thCategory.name}"></a>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</li>
-				<li class="nav-item dropdown has-mega-menu" style="position: static;"><a
-						class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-						aria-haspopup="true" aria-expanded="false">Kids Clothing</a>
-					<div class="dropdown-menu" style="width: 100%">
-						<div class="container">
-							<div class="row w3_kids  py-3">
-								<div class="col-md-3 ">
-									<span class="bg-light">Boy's Clothing</span> <a class="dropdown-item"
-										href="boys.html">T-Shirts</a> <a class="dropdown-item"
-										href="boys.html">Coats</a> <a class="dropdown-item" href="boys.html">Shirts</a>
-									<a class="dropdown-item" href="boys.html">Suits & Blazers</a> <a
-										class="dropdown-item" href="boys.html">Jackets</a> <a class="dropdown-item"
-										href="boys.html">Trousers</a>
-								</div>
-								<div class="col-md-3">
-									<a class="dropdown-item mt-4" href="boys.html">T-Shirts</a> <a class="dropdown-item"
-										href="boys.html">Coats</a> <a class="dropdown-item" href="boys.html">Shirts</a>
-									<a class="dropdown-item" href="boys.html">Suits & Blazers</a> <a
-										class="dropdown-item" href="boys.html">Jackets</a> <a class="dropdown-item"
-										href="boys.html">Trousers</a>
-								</div>
-								<div class="col-md-3">
-									<span>Girl's Clothing</span> <a class="dropdown-item" href="girls.html">T-shirts</a>
-									<a class="dropdown-item" href="girls.html">Dresses</a> <a class="dropdown-item"
-										href="girls.html">Tunics</a> <a class="dropdown-item"
-										href="girls.html">Skirts</a> <a class="dropdown-item"
-										href="girls.html">Jeans</a> <a class="dropdown-item" href="girls.html">Midi</a>
-								</div>
-								<div class="col-md-3">
-									<a class="dropdown-item  mt-4" href="girls.html">Tunics</a> <a class="dropdown-item"
-										href="girls.html">Skirts</a> <a class="dropdown-item"
-										href="girls.html">T-shirts</a> <a class="dropdown-item"
-										href="girls.html">Dresses</a> <a class="dropdown-item"
-										href="girls.html">Jeans</a>
-								</div>
-							</div>
-						</div>
-					</div>
+				<li class="nav-item"><a class="nav-link" href="about.html" 
+					th:style="'width:' + ${w} + 'px; border-right: solid 0.5px; border-color: lightgray;'">About</a>
 				</li>
-				<li class="nav-item"><a class="nav-link" href="about.html">About</a>
+				<li class="nav-item"><a class="nav-link" href="blog.html" 
+					th:style="'width:' + ${w} + 'px; border-right: solid 0.5px; border-color: lightgray;'">Blog</a>
 				</li>
-				<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a>
-				</li>
-				<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
+				<li class="nav-item"><a class="nav-link" href="contact.html" 
+					th:style="'width:' + ${w} + 'px;'">Contact</a>
 				</li>
 			</ul>
 		</div>
