--- a/src/main/webapp/views/web/user/orders.html
+++ b/src/main/webapp/views/web/user/orders.html
@@ -52,7 +52,7 @@
 									</li>
 									<hr>
 									<li class="text-right">
-										<a class="btn btn-outline-success " href="#" role="button">Order detail <i class="fas fa-angle-double-right"></i></a>
+										<a class="btn btn-outline-success " th:href="@{/orders/{id}(id=${order.id})}" role="button">Order detail <i class="fas fa-angle-double-right"></i></a>
 									</li>
 								  </ul>
 							</div>
