--- a/src/main/webapp/views/web/user/user.html
+++ b/src/main/webapp/views/web/user/user.html
@@ -21,7 +21,7 @@
 				<div class="card-header h4">
 					User Information
 				</div>
-				<div class="card-body">
+				<div th:if="${user!=null}" class="card-body">
 					<div class="row align-items-center">
 						<div class="col-sm-8">
 							<div>
