--- a/src/main/webapp/views/admin/order/orders.html
+++ b/src/main/webapp/views/admin/order/orders.html
@@ -118,15 +118,15 @@
 														<td><span th:text="${order.status}"
 																class="badge badge-pill badge-info"></span></td>
 														<td class="text-center">
-															<a href="#"
+															<a th:href="@{/admin/orders/{id}(id=${order.id})}"
 																class=" btn btn-info btn-circle">
 																<i class="fas fa-info-circle"></i>
 															</a>
-															<a th:href="@{/admin/orders/{id}/type(id=${order.id},action=0)}"
+															<a th:if="${order.status == T(vn.triplet.model.Order.Status).PENDING}" th:href="@{/admin/orders/{id}/type(id=${order.id},action=0)}"
 																class=" btn btn-success btn-circle">
 																<i class="fas fa-check"></i>
 															</a>
-															<a th:href="@{/admin/orders/{id}/type(id=${order.id},action=1)}"
+															<a th:if="${order.status == T(vn.triplet.model.Order.Status).PENDING}" th:href="@{/admin/orders/{id}/type(id=${order.id},action=1)}"
 																class=" btn btn-danger btn-circle">
 																<i class="fas fa-trash-alt"></i>
 															</a>
