--- a/src/main/webapp/views/admin/product/products.html
+++ b/src/main/webapp/views/admin/product/products.html
@@ -87,6 +87,7 @@
 													<th>Quantity</th>
 													<th>Price</th>
 													<th>Category</th>
+													<th>Status</th>
 													<th>Action</th>
 												</tr>
 											</thead>
@@ -117,6 +118,7 @@
 														<td th:text="${item.quantity}"></td>
 														<td th:text="${item.price}"></td>
 														<td th:text="${item.category.name}"></td>
+														<td  th:text="${item.delete_time==null}?'Deleted':'Available'"></td>
 														<td class="text-center">
 														<a th:href="@{'/admin/products/'+${item.id}}"
 															class=" btn btn-info btn-circle">
