--- a/src/main/webapp/views/admin/user/user.html
+++ b/src/main/webapp/views/admin/user/user.html
@@ -46,7 +46,7 @@
 								<div class="row">
 									<div class="col-md-4">
 										<div class="profile-img">
-											<img th:src="@{/assets/images/face1.jpg}" alt="" />
+											<img th:src="@{'/assets/images/'+${user.avatar}}" alt="" />
 										</div>
 									</div>
 									<div class="col-md-6">
