--- a/src/main/webapp/views/web/layout/choose-left.html
+++ b/src/main/webapp/views/web/layout/choose-left.html
@@ -2,157 +2,102 @@
 <!-- grid left -->
 <div th:fragment="choose-left" class="side-bar col-lg-3">
 	<!--preference -->
-	<div class="left-side">
+	<div class="left-side" th:if="${categories != null}">
 		<h3 class="shopf-sear-headits-sear-head">Categories</h3>
 		<ul>
-			<li><input type="checkbox" class="checked" name="cat1" id="cat1">
-				<label for="cat1">Fashion</label></li>
-			<li><input type="checkbox" class="checked" name="cat2" id="cat2">
-				<label for="cat2">Popular</label></li>
-			<li><input type="checkbox" class="checked" name="cat3" id="cat3">
-				<label for="cat3">Trending</label></li>
-			<li><input type="checkbox" class="checked" name="cat4" id="cat4">
-				<label for="cat4">Sort by popularity</label></li>
-
-		</ul>
-	</div>
-	<!-- // preference -->
-	<div class="search-hotel">
-		<h3 class="shopf-sear-headits-sear-head">
-			<span>Brand</span> in focus
-		</h3>
-		<form action="#" method="post">
-			<input type="search" placeholder="search here" name="search"
-				required=""> <input type="submit" value="Search">
-		</form>
-	</div>
-	<!-- price range -->
-	<div class="range">
-		<h3 class="shopf-sear-headits-sear-head">
-			<span>Price</span> range
-		</h3>
-		<ul class="dropdown-menu6">
-			<li>
-
-				<div id="slider-range"></div> <input type="text" id="amount"
-				style="border: 0; color: #ffffff; font-weight: normal;" />
+			<li th:each="category : ${categories}">
+				<a th:href="@{/categories/{id}/products(id=${category.id})}">
+					<label for="cat1" th:text="${category.name}"></label>
+				</a>
 			</li>
 		</ul>
 	</div>
-	<!-- //price range -->
-	<!--preference -->
-	<div class="left-side">
-		<h3 class="shopf-sear-headits-sear-head">
-			<span>latest</span> arrivals
-		</h3>
-		<ul>
-			<li><input type="checkbox" class="checked" name="arr1" id="arr1">
-				<label for="arr1">last 30 days</label></li>
-			<li><input type="checkbox" class="checked" name="arr2" id="arr2">
-				<label for="arr2">last 90 days</label></li>
-			<li><input type="checkbox" class="checked" name="arr3" id="arr3">
-				<label for="arr3">last 150 days</label></li>
-
-		</ul>
-	</div>
 	<!-- // preference -->
-	<!-- discounts -->
-	<div class="left-side">
-		<h3 class="shopf-sear-headits-sear-head">Sizes</h3>
-		<ul>
-			<li><input type="checkbox" class="checked" name="size1"
-				id="size1"> <label for="size1">XS</label></li>
-			<li><input type="checkbox" class="checked" name="size2"
-				id="size2"> <label for="size2">S</label></li>
-			<li><input type="checkbox" class="checked" name="size3"
-				id="size3"> <label for="size3">M</label></li>
-			<li><input type="checkbox" class="checked" name="size4"
-				id="size4"> <label for="size4">L</label></li>
-			<li><input type="checkbox" class="checked" name="size5"
-				id="size5"> <label for="size5">XL</label></li>
-			<li><input type="checkbox" class="checked" name="size6"
-				id="size6"> <label for="size6">XXL</label></li>
-			<li><input type="checkbox" class="checked" name="size7"
-				id="size7"> <label for="size7">XXXL</label></li>
-		</ul>
+	<div class="search-hotel" th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}">
+		<h3 class="shopf-sear-headits-sear-head">
+			<span>Product Name</span>
+			<a th:if="${#request.getParameter('name') != null}"
+				th:href="${urlBuilder.replaceQueryParam('name', '').toUriString()}"
+				class="btn btn-danger" role="button"
+				style="float: right; height: 20px; font-size: 13px; line-height: 5px;">Bỏ chọn tiêu chí này</a>
+		</h3>
+		<form action="" method="get"> 
+			<input th:if="${#request.getParameter('rating') != null}" type="hidden" name="rating" th:value="${#request.getParameter('rating')}"> 
+ 			<input th:if="${#request.getParameter('fromprice') != null}" type="hidden" name="fromprice" th:value="${#request.getParameter('fromprice')}">
+			<input th:if="${#request.getParameter('toprice') != null}" type="hidden" name="toprice" th:value="${#request.getParameter('toprice')}">
+			<input th:if="${#request.getParameter('page') != null}" type="hidden" name="page" th:value="1"> 	 		
+			<input type="search" placeholder="Tìm gì đó đi" name="name" th:value="${#request.getParameter('name') != null ? #request.getParameter('name'):''}"> 
+			<input type="submit" value="Search">
+		</form>
 	</div>
-	<!-- //discounts -->
-	<!-- Binding -->
-	<div class="left-side">
-		<h3 class="shopf-sear-headits-sear-head">Color</h3>
-		<div class="d-flex">
-			<ul>
-				<li><input type="checkbox" class="checked" name="color1"
-					id="color1"> <label for="color1">Black</label></li>
-				<li><input type="checkbox" class="checked" name="color2"
-					id="color2"> <label for="color2">Blue</label></li>
-				<li><input type="checkbox" class="checked" name="color3"
-					id="color3"> <label for="color3">Red</label></li>
-				<li><input type="checkbox" class="checked" name="color4"
-					id="color4"> <label for="color4">Yellow</label></li>
-				<li><input type="checkbox" class="checked" name="color5"
-					id="color5"> <label for="color5">White</label></li>
-			</ul>
-			<ul>
-				<li><input type="checkbox" class="checked" name="color6"
-					id="color6"> <label for="color6">Green</label></li>
-				<li><input type="checkbox" class="checked" name="color7"
-					id="color7"> <label for="color7">Multi</label></li>
-				<li><input type="checkbox" class="checked" name="color8"
-					id="color8"> <label for="color8">Purple</label></li>
-				<li><input type="checkbox" class="checked" name="color9"
-					id="color9"> <label for="color9">Gold</label></li>
-				<li><input type="checkbox" class="checked" name="color10"
-					id="color10"> <label for="color10">Orange</label></li>
-			</ul>
-		</div>
-	</div>
-	<!-- //Binding -->
-	<!-- discounts -->
-	<div class="left-side">
-		<h3 class="shopf-sear-headits-sear-head">Discount</h3>
-		<ul>
-			<li><input type="checkbox" class="checked" name="dis1" id="dis1">
-				<label for="dis1">5% - 20%</label></li>
-			<li><input type="checkbox" class="checked" name="dis2" id="dis2">
-				<label for="dis2">20% - 40%</label></li>
-			<li><input type="checkbox" class="dis3" name="dis3" id="dis3">
-				<label for="dis3">40% - 60%</label></li>
-			<li><input type="checkbox" class="checked" name="dis4" id="dis4">
-				<label for="dis4">60% or more</label></li>
-		</ul>
+	<!-- price range -->
+	<div class="search-hotel" th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}">
+		<h3 class="shopf-sear-headits-sear-head">
+			<span>Price</span> range
+			<a th:if="${#request.getParameter('fromprice') != null} or ${#request.getParameter('toprice') != null}"
+				th:href="${urlBuilder.replaceQueryParam('fromprice', '').replaceQueryParam('toprice', '').toUriString()}"
+				class="btn btn-danger" role="button"
+				style="float: right; height: 20px; font-size: 13px; line-height: 5px;">Bỏ chọn tiêu chí này</a>
+		</h3>
+		<form action="" method="get"> 
+			<input th:if="${#request.getParameter('rating') != null}" type="hidden" name="rating" th:value="${#request.getParameter('rating')}"> 
+			<input th:if="${#request.getParameter('name') != null}" type="hidden" name="name" th:value="${#request.getParameter('name')}"> 
+			<input th:if="${#request.getParameter('page') != null}" type="hidden" name="page" th:value="1"> 						
+			<p>From: </p>
+			<input type="number" min="0" placeholder="Từ số tiền" name="fromprice" th:value="${#request.getParameter('fromprice') != null ? #request.getParameter('fromprice'):''}">
+			<span>VNĐ</span> 
+			<p>To: </p>
+			<input type="number" min="0" placeholder="Đến số tiền" name="toprice" th:value="${#request.getParameter('toprice') != null ? #request.getParameter('toprice'):''}"> 
+			<span>VNĐ</span> 
+			<input type="submit" value="Search" style="margin-top:5px;">
+		</form>
+
 	</div>
 	<!-- //discounts -->
 	<!-- reviews -->
-	<div class="customer-rev left-side">
-		<h3 class="shopf-sear-headits-sear-head">Customer Review</h3>
+	<div class="customer-rev left-side" th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}">
+		<h3 class="shopf-sear-headits-sear-head">Customer Review<a
+			th:if="${#request.getParameter('rating') != null}"
+			th:href="${urlBuilder.replaceQueryParam('rating', '').toUriString()}" 
+			class="btn btn-danger" role="button"
+			style="float: right; height: 20px; font-size: 13px; line-height: 5px;">Bỏ chọn tiêu chí này</a>
+		</h3>
 		<ul>
-			<li><a href="#"> <i class="fa fa-star" aria-hidden="true"></i>
+			<li><a 	th:if="${#request.getParameter('page') == null}"
+					th:href="${#strings.replace(#uris.unescapeQueryParam(urlBuilder.replaceQueryParam('rating', '5').toUriString()).replace('%20','+'),' ','+')}"> <i class="fa fa-star" aria-hidden="true"></i>
 					<i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star"
 					aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i>
-					<i class="fa fa-star" aria-hidden="true"></i> <span>5.0</span>
+					<i class="fa fa-star" aria-hidden="true"></i> <span>5.0 sao ấu lỳ</span><span th:if="${#request.getParameter('rating') == #strings?.toString(5)}">&#10004;</span>
 			</a></li>
-			<li><a href="#"> <i class="fa fa-star" aria-hidden="true"></i>
+			<li><a th:if="${#request.getParameter('page') != null}"
+					th:href="${#strings.replace(#uris.unescapeQueryParam(urlBuilder.replaceQueryParam('rating', '5').replaceQueryParam('page', '1').toUriString()).replace('%20','+'),' ','+')}"> <i class="fa fa-star" aria-hidden="true"></i>
 					<i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star"
 					aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i>
-					<i class="fa fa-star-o" aria-hidden="true"></i> <span>4.0</span>
+					<i class="fa fa-star" aria-hidden="true"></i> <span>5.0 sao ấu lỳ</span><span th:if="${#request.getParameter('rating') == #strings?.toString(5)}">&#10004;</span>
 			</a></li>
-			<li><a href="#"> <i class="fa fa-star" aria-hidden="true"></i>
+			<li><a 	th:if="${#request.getParameter('page') == null}"
+					th:href="${#strings.replace(#uris.unescapeQueryParam(urlBuilder.replaceQueryParam('rating', '4').toUriString()).replace('%20','+'),' ','+')}"> <i class="fa fa-star" aria-hidden="true"></i>
 					<i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star"
-					aria-hidden="true"></i> <i class="fa fa-star-half-o"
-					aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i>
-					<span>3.5</span>
+					aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i>
+					<i class="fa fa-star-o" aria-hidden="true"></i> <span>4.0 sao trở lên</span><span th:if="${#request.getParameter('rating') == #strings?.toString(4)}">&#10004;</span>
 			</a></li>
-			<li><a href="#"> <i class="fa fa-star" aria-hidden="true"></i>
+			<li><a 	th:if="${#request.getParameter('page') != null}"
+					th:href="${#strings.replace(#uris.unescapeQueryParam(urlBuilder.replaceQueryParam('rating', '4').replaceQueryParam('page', '1').toUriString()).replace('%20','+'),' ','+')}"> <i class="fa fa-star" aria-hidden="true"></i>
+					<i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star"
+					aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i>
+					<i class="fa fa-star-o" aria-hidden="true"></i> <span>4.0 sao trở lên</span><span th:if="${#request.getParameter('rating') == #strings?.toString(4)}">&#10004;</span>
+			</a></li>
+			<li><a 	th:if="${#request.getParameter('page') == null}"
+					th:href="${#strings.replace(#uris.unescapeQueryParam(urlBuilder.replaceQueryParam('rating', '3').toUriString()).replace('%20','+'),' ','+')}"> <i class="fa fa-star" aria-hidden="true"></i>
 					<i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star"
 					aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i>
-					<i class="fa fa-star-o" aria-hidden="true"></i> <span>3.0</span>
+					<i class="fa fa-star-o" aria-hidden="true"></i> <span>3.0 sao trở lên</span><span th:if="${#request.getParameter('rating') == #strings?.toString(3)}">&#10004;</span>
 			</a></li>
-			<li><a href="#"> <i class="fa fa-star" aria-hidden="true"></i>
-					<i class="fa fa-star" aria-hidden="true"></i> <i
-					class="fa fa-star-half-o" aria-hidden="true"></i> <i
-					class="fa fa-star-o" aria-hidden="true"></i> <i
-					class="fa fa-star-o" aria-hidden="true"></i> <span>2.5</span>
+			<li><a 	th:if="${#request.getParameter('page') != null}"
+					th:href="${#strings.replace(#uris.unescapeQueryParam(urlBuilder.replaceQueryParam('rating', '3').replaceQueryParam('page', '1').toUriString()).replace('%20','+'),' ','+')}"> <i class="fa fa-star" aria-hidden="true"></i>
+					<i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star"
+					aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i>
+					<i class="fa fa-star-o" aria-hidden="true"></i><span>3.0 sao trở lên</span><span th:if="${#request.getParameter('rating') == #strings?.toString(3)}">&#10004;</span>
 			</a></li>
 		</ul>
 	</div>
